# backend-benchmark

./: .gitignore  post.lua
go/: README.md
go/chi/: go.mod  main.go
go/echo/: go.mod  go.sum  main.go
go/fasthttp/: go.mod  main.go
go/fiber/: go.mod  main.go
go/gin/: go.mod  main.go
go/httprouter/: go.mod  main.go
go/nethttp/: go.mod  main.go
nodejs/: README.md
nodejs/express/: main.js
nodejs/fastify/: main.js  package-lock.json  package.json
nodejs/hono/: main.js  package-lock.json  package.json
nodejs/http/: main.js
nodejs/nestjs/: package-lock.json
nodejs/nestjs/src/: app.controller.ts  main.ts
nodejs/uwebsockets/: main.js  package-lock.json  package.json
python/: README.md  requirements.txt
python/asgi/: main.py
python/django/: main.py
python/falcon/: main.py
python/fastapi/: main.py
python/flask/: main.py
python/litestar/: main.py
python/sanic/: main.py
rust/: Cargo.toml  Dockerfile  README.md  bench.sh  docker-compose.yml  remote-README.md  remote-client.sh  remote-server.sh
rust/actix/: Cargo.toml
rust/actix/src/: main.rs
rust/axum/: Cargo.toml
rust/axum/src/: main.rs
rust/hyper/: Cargo.toml
rust/hyper/src/: main.rs
rust/poem/: Cargo.toml
rust/poem/src/: main.rs
rust/rocket/: Cargo.toml
rust/rocket/src/: main.rs
rust/salvo/: Cargo.toml
rust/salvo/src/: main.rs
rust/warp/: Cargo.toml
rust/warp/src/: main.rs
